RESOLVED FIXED269871
NEW TEST [ MacOS ] imported/w3c/web-platform-tests/media-source/dedicated-worker/mediasource-worker-detach-element.html is a flaky crash
https://bugs.webkit.org/show_bug.cgi?id=269871
Summary NEW TEST [ MacOS ] imported/w3c/web-platform-tests/media-source/dedicated-wor...
Jay Stfleur
Reported 2024-02-21 14:10:59 PST
Description: imported/w3c/web-platform-tests/media-source/dedicated-worker/mediasource-worker-detach-element.html Is a flaky crash on debug since test was introduced. History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fmedia-source%2Fdedicated-worker%2Fmediasource-worker-detach-element.html Diff/Image Diff/Crash Log: ASSERTION FAILED: Unhandled message RemoteSourceBufferProxy_Abort to 54 assertionFailureDueToUnreachableCode /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/WebKitBuild/Debug/DerivedSources/WebKit/GPUConnectionToWebProcessMessageReceiver.cpp(152) : virtual void WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection &, IPC::Decoder &) 1 0x108aae9b9 WTFCrash 2 0x13eff232e WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 3 0x1415975a9 IPC::Connection::dispatchMessage(IPC::Decoder&) 4 0x141597978 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 5 0x141597c6b IPC::Connection::dispatchOneIncomingMessage() 6 0x1415b15dd IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_14::operator()() const 7 0x1415b1549 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_14, void>::call() 8 0x10a8cb982 WTF::Function<void ()>::operator()() const 9 0x108b7e44e WTF::RunLoop::performWork() 10 0x108b8256e WTF::RunLoop::performWork(void*)
Attachments
Adding crash log from IPS file (35.65 KB, text/plain)
2024-02-21 17:12 PST, Jay Stfleur
no flags
Radar WebKit Bug Importer
Comment 1 2024-02-21 14:35:21 PST
Jay Stfleur
Comment 2 2024-02-21 17:12:41 PST
Created attachment 470007 [details] Adding crash log from IPS file
Jean-Yves Avenard [:jya]
Comment 3 2024-02-23 04:33:37 PST
EWS
Comment 4 2024-02-23 19:03:54 PST
Committed 275268@main (5f3622e3b245): <https://commits.webkit.org/275268@main> Reviewed commits have been landed. Closing PR #25008 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.